7561 - Fixed contrast issues

--- a/arches/app/media/css/accessibility.css
+++ b/arches/app/media/css/accessibility.css
@@ -72,3 +72,8 @@
     color: #7AD02F;
     text-decoration: underline;
 }
+
+.map-data-drop-area,
+.workbench-card-sidebar-tab {
+    color: #000;
+}
